<resources>
    <string name="app_name">Quizlet Clone</string>
    <string name="app_version">v0.0.1</string>
    <string name="welcome">Welcome back</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="signup">Sign up</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="base_url">http://10.0.2.2:4000/graphql</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="terms">terms</string>
    <string name="term_in_this_set">Terms in this set</string>
    <string name="edit">Edit</string>
    <string name="learn">Learn</string>
    <string name="next_question">Next question</string>
    <string name="terms_remaining">terms remaining</string>
    <string name="correct">You\'re correct!</string>
    <string name="incorrect">Incorrect</string>
    <string name="congratulation">Congratulation</string>
    <string name="you_ve_mastered_the_set">You\'ve mastered the set!</string>
    <string name="continue_learning">Continue learning</string>
    <string name="search">Search</string>
    <string name="add_set">Create new set</string>
    <string name="logging_you_in">Logging you in...</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="explanation">Explanation</string>
    <string name="add_term">Add term</string>
    <string name="save">Save</string>
    <string name="term">Term</string>
    <string name="term_deleted">Term Deleted!</string>
    <string name="logout">Logout</string>
    <string name="setting">Setting</string>
</resources>